[gd_scene load_steps=9 format=3 uid="uid://cw6gj40op07vr"]

[ext_resource type="Theme" uid="uid://dsowi08f2y6iv" path="res://themes/root_theme.tres" id="1_60ioc"]
[ext_resource type="Script" path="res://scripts/menus/quests_panel/quest_details_panel.gd" id="2_k8rm2"]
[ext_resource type="Theme" uid="uid://dspb6mujs3bb2" path="res://themes/title_text_theme.tres" id="2_qo0lb"]
[ext_resource type="StyleBox" uid="uid://cqjpxgwhrhqj2" path="res://themes/nested_ui/inner_panel.tres" id="4_5vbr7"]
[ext_resource type="PackedScene" uid="uid://b11xiyik10j7i" path="res://prefabs/ui/reward_panel.tscn" id="5_let4i"]
[ext_resource type="Script" path="res://scripts/menus/scroll_better_follow.gd" id="6_6nmhd"]
[ext_resource type="PackedScene" uid="uid://bw758t8yxr7j1" path="res://prefabs/ui/inventory/item_details_panel.tscn" id="6_pbljs"]
[ext_resource type="PackedScene" uid="uid://chpi5qfgk1cqj" path="res://prefabs/ui/sfx_button.tscn" id="7_7airq"]

[node name="QuestDetailsPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_60ioc")
script = ExtResource("2_k8rm2")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.431373)

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="QuestName" type="RichTextLabel" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 16.0
offset_right = 250.0
offset_bottom = 66.0
grow_horizontal = 2
theme = ExtResource("2_qo0lb")
bbcode_enabled = true
text = "[center]Quest Name Goes Here[/center]"
fit_content = true

[node name="QuestDescription" type="RichTextLabel" parent="Panel"]
custom_minimum_size = Vector2(0, 68)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.142
anchor_right = 1.0
anchor_bottom = 0.142
offset_left = 110.0
offset_top = -33.88
offset_right = -110.0
offset_bottom = 43.12
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 20
theme_override_font_sizes/bold_font_size = 20
theme_override_font_sizes/italics_font_size = 20
theme_override_font_sizes/bold_italics_font_size = 20
theme_override_font_sizes/mono_font_size = 20
bbcode_enabled = true
text = "[center]Quest details go here. I am allowing for quite a bit of details, hopefully I have enough space for everything I want to fit. A little backstory is always cool. But not too much text here![/center]"

[node name="StepDetailPanel" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -450.0
offset_top = 139.0
offset_right = 450.0
offset_bottom = 381.0
grow_horizontal = 2
theme_override_styles/panel = ExtResource("4_5vbr7")

[node name="StepName" type="RichTextLabel" parent="Panel/StepDetailPanel"]
layout_mode = 0
offset_left = 6.0
offset_top = 6.0
offset_right = 471.0
offset_bottom = 36.0
theme_override_font_sizes/normal_font_size = 21
theme_override_font_sizes/bold_font_size = 21
theme_override_font_sizes/italics_font_size = 21
theme_override_font_sizes/bold_italics_font_size = 21
theme_override_font_sizes/mono_font_size = 21
bbcode_enabled = true
text = "[center]Quest Step Name Goes Here[/center]"
scroll_active = false

[node name="StepDescription" type="RichTextLabel" parent="Panel/StepDetailPanel"]
clip_contents = false
layout_mode = 0
offset_left = 6.0
offset_top = 38.0
offset_right = 471.0
offset_bottom = 169.0
text = "These will be the details for the current quest step. This should provide enough space for a good description of what's going on in the story, hopefully all this text isn't too busy. It's important to communicate all this without being too troubled."
scroll_active = false

[node name="StepStatus" type="RichTextLabel" parent="Panel/StepDetailPanel"]
clip_contents = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -330.0
offset_top = 6.0
offset_right = -5.0
offset_bottom = 32.0
grow_horizontal = 0
bbcode_enabled = true
text = "[center]Defeat 123456789012345! (234 / 567)[/center]"
fit_content = true
scroll_active = false

[node name="TurnInTo" type="RichTextLabel" parent="Panel/StepDetailPanel"]
clip_contents = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -282.0
offset_top = -49.0
offset_right = -76.0
offset_bottom = -17.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 21
theme_override_font_sizes/bold_font_size = 21
theme_override_font_sizes/italics_font_size = 21
theme_override_font_sizes/bold_italics_font_size = 21
theme_override_font_sizes/mono_font_size = 21
bbcode_enabled = true
text = "[center]Turn In To:[/center]"
fit_content = true
scroll_active = false

[node name="StepTurnInTarget" type="RichTextLabel" parent="Panel/StepDetailPanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -330.0
offset_top = -17.0
offset_right = -26.0
offset_bottom = 9.0
grow_horizontal = 0
grow_vertical = 2
bbcode_enabled = true
text = "[center]Turn In To Target Name[/center]"
fit_content = true

[node name="RewardPanel" parent="Panel/StepDetailPanel" instance=ExtResource("5_let4i")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -440.0
offset_top = -70.0
offset_right = 440.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 0

[node name="GoldGroup" parent="Panel/StepDetailPanel/RewardPanel" index="1"]
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="ScrollContainer" type="ScrollContainer" parent="Panel" node_paths=PackedStringArray("boxContainer")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 190.0
offset_top = 385.0
offset_right = -172.0
offset_bottom = -58.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true
horizontal_scroll_mode = 0
script = ExtResource("6_6nmhd")
boxContainer = NodePath("VBoxContainer")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer"]
custom_minimum_size = Vector2(900, 76)
layout_mode = 2
size_flags_vertical = 3

[node name="BackButton" parent="Panel" instance=ExtResource("7_7airq")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -52.0
offset_right = 25.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[node name="ItemDetailsPanel" parent="." instance=ExtResource("6_pbljs")]
visible = false
layout_mode = 1

[connection signal="show_item_details" from="Panel/StepDetailPanel/RewardPanel" to="." method="_on_reward_panel_show_item_details"]
[connection signal="visibility_changed" from="Panel/ScrollContainer" to="Panel/ScrollContainer" method="_on_visibility_changed"]
[connection signal="pressed" from="Panel/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="back_pressed" from="ItemDetailsPanel" to="." method="_on_item_details_panel_back_pressed"]

[editable path="Panel/StepDetailPanel/RewardPanel"]
